Visual Changes on Templates

--- a/src/main/resources/templates/addEnterprise.html
+++ b/src/main/resources/templates/addEnterprise.html
@@ -26,53 +26,53 @@
     <form th:action="@{/saveenterprise}" th:object="${enterprise}" method="post">
 
 
-      <div class="row">
-        <div class="form-group col-md-12">
-          <label class="col-md-3" for="nombre">Nombre de la Empresa:</label>
-          <div class="col-md-6">
-            <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required="required">
+      <div class="row fw-bold">
+        <div class="form-group col-md-12 fw-bold">
+          <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
+          <div class="col-md-6 fw-bold">
+            <input type="text" th:field="*{nombre}" class="form-control fw-bold" id="nombre" required="required">
           </div>
         </div>
       </div>
 
 
-      <div class="row">
-        <div class="form-group col-md-12">
-          <label class="col-md-3" for="direccion">Direccion de la empresa:</label>
-          <div class="col-md-6">
-            <input type="text" th:field="*{direccion}" class="form-control" id="direccion" required="required"></div>
+      <div class="row fw-bold">
+        <div class="form-group col-md-12 fw-bold">
+          <label class="col-md-3 fw-bold" for="direccion">Direccion de la empresa:</label>
+          <div class="col-md-6 fw-bold">
+            <input type="text" th:field="*{direccion}" class="form-control fw-bold" id="direccion" required="required"></div>
         </div>
       </div>
 
 
-      <div class="row">
-        <div class="form-group col-md-12">
-          <label class="col-md-3" for="telefono">Telefono de la empresa:</label>
-          <div class="col-md-6">
-            <input type="text" th:field="*{telefono}" class="form-control" id="telefono" required="required"></div>
+      <div class="row fw-bold">
+        <div class="form-group col-md-12 fw-bold">
+          <label class="col-md-3 fw-bold" for="telefono">Telefono de la empresa:</label>
+          <div class="col-md-6 fw-bold">
+            <input type="text" th:field="*{telefono}" class="form-control fw-bold" id="telefono" required="required"></div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="form-group col-md-12">
-          <label class="col-md-3" for="NIT">NIT de la empresa:</label>
-          <div class="col-md-6">
-            <input type="text" th:field="*{nit}" class="form-control" id="NIT" required="required"></div>
+      <div class="row fw-bold">
+        <div class="form-group col-md-12 fw-bold">
+          <label class="col-md-3 fw-bold" for="NIT">NIT de la empresa:</label>
+          <div class="col-md-6 fw-bold">
+            <input type="text" th:field="*{nit}" class="form-control fw-bold" id="NIT" required="required"></div>
         </div>
       </div>
 
 
 
-      <div class="row">
-        <div class="col-md-2">
-          <button class="btn btn-success"> Crear Empresa  </button>
+      <div class="row fw-bold">
+        <div class="col-md-2 fw-bold">
+          <button class="btn btn-success fw-bold"> Crear Empresa  </button>
         </div>
       </div>
 
     </form>
 
     <br>
-    <a href="javascript: history.go(-1)" class="btn btn-info" role="button">Atrás</a>
+    <a href="javascript: history.go(-1)" class="btn btn-info fw-bold" role="button">Atrás</a>
 
 
   </div>
