--- a/src/main/resources/templates/editMovement.html
+++ b/src/main/resources/templates/editMovement.html
@@ -29,20 +29,20 @@
     <form th:action="@{/updatemovement}" th:object="${movement}" method="post">
 
 
-        <div class="row">
-            <div class="form-group col-md-12">
+        <div class="row fw-bold">
+            <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="id">ID del movimiento:</label>
-                <div class="col-md-6">
-                    <input type="text" name="id" th:field="*{id}" class="form-control" id="id" required="required" readonly></div>
+                <div class="col-md-6 fw-bold">
+                    <input type="text" name="id" th:field="*{id}" class="form-control fw-bold" id="id" required="required" readonly></div>
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="form-group col-md-12">
+        <div class="row fw-bold">
+            <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="concepto">Concepto del Movimiento:</label>
-                <div class="col-md-6">
-                    <select th:field="*{concepto}" class="form-control" id="concepto" required="required">
+                <div class="col-md-6 fw-bold">
+                    <select th:field="*{concepto}" class="form-control fw-bold" id="concepto" required="required">
                         <option th:value=1>Materias Primas</option>
                         <option th:value=2>Aditivos</option>
                         <option th:value=3>Empaques</option>
@@ -62,20 +62,20 @@
         </div>
 
 
-        <div class="row">
-            <div class="form-group col-md-12">
+        <div class="row fw-bold">
+            <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="monto">Valor del movimiento:</label>
-                <div class="col-md-6">
-                    <input type="number" th:field="*{monto}" class="form-control" id="monto" required="required"></div>
+                <div class="col-md-6 fw-bold">
+                    <input type="number" th:field="*{monto}" class="form-control fw-bold" id="monto" required="required"></div>
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="form-group col-md-12">
+        <div class="row fw-bold">
+            <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="usuario">Responsable del movimiento:</label>
-                <div class="col-md-6">
-                    <select th:field="*{usuario}" class="form-control" id="usuario" required="required" readonly>
+                <div class="col-md-6 fw-bold">
+                    <select th:field="*{usuario}" class="form-control fw-bold" id="usuario" required="required" readonly>
                         <option th:value=*{usuario.id} th:text=*{usuario.correo}></option>
                     </select>
                 </div>
@@ -83,18 +83,18 @@
         </div>
 
 
-        <div class="row">
-            <div class="form-group col-md-12">
+        <div class="row fw-bold">
+            <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="fecha">Fecha del movimiento:</label>
-                <div class="col-md-6">
-                    <input type="date" th:field="*{fecha}" class="form-control" id="fecha" required="required" readonly></div>
+                <div class="col-md-6 fw-bold">
+                    <input type="date" th:field="*{fecha}" class="form-control fw-bold" id="fecha" required="required" readonly></div>
             </div>
         </div>
 
 
 
-           <div class="row">
-            <div class="col-md-2 ">
+           <div class="row fw-bold">
+            <div class="col-md-2 fw-bold">
                 <button class="btn btn-success fw-bold">Actualizar Movimiento</button>
             </div>
         </div>
