--- a/src/main/resources/templates/viewEnterprises.html
+++ b/src/main/resources/templates/viewEnterprises.html
@@ -24,17 +24,17 @@
     <div class="container">
         <h1 class="display-5 fw-bold"> Lista de Empresas</h1>
 
-        <br><table class="table table-striped">
+        <br><table class="table table-striped fw-bold">
             <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Direccion</th>
-                <th>Telefono</th>
-                <th>NIT</th>
-                <th>Empleados</th>
-                <th>Movimientos</th>
-                <th>Editar</th>
-                <th>Eliminar</th>
+                <th class="fw-bold">ID</th>
+                <th class="fw-bold">Nombre</th>
+                <th class="fw-bold">Direccion</th>
+                <th class="fw-bold">Telefono</th>
+                <th class="fw-bold">NIT</th>
+                <th class="fw-bold">Empleados</th>
+                <th class="fw-bold">Movimientos</th>
+                <th class="fw-bold">Editar</th>
+                <th class="fw-bold">Eliminar</th>
 
             </tr>
 
