--- a/src/main/resources/templates/editEnterprise.html
+++ b/src/main/resources/templates/editEnterprise.html
@@ -25,55 +25,55 @@
 
   <form th:action="@{/updateenterprise/{id}}" th:object="${enterprise}" method="post">
 
-    <div class="row">
-      <div class="form-group col-md-12">
+    <div class="row fw-bold">
+      <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="id">ID de la Empresa:</label>
-        <div class="col-md-6">
-          <input type="text" th:field="*{id}" class="form-control" id="id" required="required" readonly>
+        <div class="col-md-6 fw-bold">
+          <input type="text" th:field="*{id}" class="form-control fw-bold" id="id" required="required" readonly>
         </div>
       </div>
     </div>
 
 
-    <div class="row">
-      <div class="form-group col-md-12">
+    <div class="row fw-bold">
+      <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
-        <div class="col-md-6">
+        <div class="col-md-6 fw-bold">
           <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required="required">
         </div>
       </div>
     </div>
 
 
-    <div class="row">
-      <div class="form-group col-md-12">
+    <div class="row fw-bold">
+      <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="direccion">Direccion de la empresa:</label>
-        <div class="col-md-6">
-          <input type="text" th:field="*{direccion}" class="form-control" id="direccion" required="required"></div>
+        <div class="col-md-6 fw-bold">
+          <input type="text" th:field="*{direccion}" class="form-control fw-bold" id="direccion" required="required"></div>
       </div>
     </div>
 
 
-    <div class="row">
-      <div class="form-group col-md-12">
-        <label class="col-md-3 fw-bold" for="telefono">Telefono de la empresa:</label>
-        <div class="col-md-6">
-          <input type="text" th:field="*{telefono}" class="form-control" id="telefono" required="required"></div>
+    <div class="row fw-bold">
+      <div class="form-group col-md-12 fw-bold">
+        <label class="col-md-3 fw-bold fw-bold" for="telefono">Telefono de la empresa:</label>
+        <div class="col-md-6 fw-bold">
+          <input type="text" th:field="*{telefono}" class="form-control fw-bold" id="telefono" required="required"></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="form-group col-md-12">
-        <label class="col-md-3 fw-bold" for="NIT">NIT de la empresa:</label>
-        <div class="col-md-6">
-          <input type="text" th:field="*{nit}" class="form-control" id="NIT" required="required"></div>
+    <div class="row fw-bold">
+      <div class="form-group col-md-12 fw-bold">
+        <label class="col-md-3 fw-bold fw-bold" for="NIT">NIT de la empresa:</label>
+        <div class="col-md-6 fw-bold">
+          <input type="text" th:field="*{nit}" class="form-control fw-bold" id="NIT" required="required"></div>
       </div>
     </div>
 
 
 
-    <div class="row">
-      <div class="col-md-2">
+    <div class="row fw-bold">
+      <div class="col-md-2 fw-bold">
         <button class="btn btn-success fw-bold"> Actualizar Empresa  </button>
       </div>
     </div>
