--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
                 <a th:href="@{/viewenterprises}" type="button" class="btn btn-primary btn-lg px-4 gap-3">Crear o Ver Empresa</a>
             </div>
             <div sec:authorize="isAuthenticated()">
-                <a th:href="@{/logout}" type="button" class="btn btn-primary btn-lg px-6 gap-6">Sign Out</a>
+                <a th:href="@{/logout}" type="button" class="btn btn-primary btn-lg px-6 gap-6">Log Out</a>
             </div>
 
         </div>
