--- a/src/main/resources/templates/addMovement.html
+++ b/src/main/resources/templates/addMovement.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container fw-bold">
     <p th:inline="text" class="text-right fw-bold">User: [[${#httpServletRequest.remoteUser}]]</p><br>
-    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
+    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Log out</a></button>
 
     <h1 class="display-5 fw-bold"> Agregue aqui los datos del movimiento</h1>
     <br>
