--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -23,7 +23,7 @@
 
 <div class="container fw-bold ">
     <p th:inline="text" class="text-right fw-bold">User: [[${#httpServletRequest.remoteUser}]]</p>
-    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
+    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Log Out</a></button>
 
     <h1 class="display-5 fw-bold"> Lista de movimientos</h1>
 
