Changes Color on Buttons on Templates

--- a/src/main/resources/templates/editEnterprise.html
+++ b/src/main/resources/templates/editEnterprise.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     a{
-    color:grey;
+    color:black;
     }
     a:hover {
     color: #616A6B;
@@ -37,7 +37,7 @@
     </div>
 
 
-    <div class="row fw-bold">
+    <div class="row fw-bold fw-bold">
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
         <div class="col-md-6 fw-bold">
