--- a/src/main/resources/templates/editUsers.html
+++ b/src/main/resources/templates/editUsers.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     a{
-    color:white;
+    color:black;
     }
     a:hover {
     color: black;
