--- a/src/main/resources/templates/viewEnterprises.html
+++ b/src/main/resources/templates/viewEnterprises.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <style>
     a{
-    color:white;
+    color:black;
     }
     a:hover {
     color: black;
