Little Changes On Templates

--- a/src/main/resources/templates/editEnterprise.html
+++ b/src/main/resources/templates/editEnterprise.html
@@ -41,7 +41,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required="required">
+          <input type="text" th:field="*{nombre}" class="form-control fw-bold" id="nombre" required="required">
         </div>
       </div>
     </div>
