Fixed Problems On button On edit User Template

--- a/src/main/resources/templates/editMovement.html
+++ b/src/main/resources/templates/editMovement.html
@@ -95,7 +95,7 @@
 
            <div class="row fw-bold">
             <div class="col-md-2 fw-bold">
-                <button class="btn btn-success fw-bold">Actualizar Movimiento</button>
+                <button class="btn btn-success btn-sm fw-bold ">Actualizar Movimiento</button>
             </div>
         </div>
 
