--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 <main>
 
     <div class="px-4 py-5 my-5 text-center" >
-        <img src="img/mouse.png" class="d-block mx-auto mb-4" height="130"/>
+        <img src="img/WhatsApp Image 2022-09-24 at 7.39.50 AM.jpeg" class="d-block mx-auto mb-4" height="130"/>
         <h1 class="display-5 fw-bold">Bienvenid@ a Smart Team Manage Enterprises</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-6">
