--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <style>
     a{
-    color:black;
+    color:grey;
     }
     a:hover {
     color: black;
@@ -22,7 +22,7 @@
 <main>
 
     <div class="px-4 py-5 my-5 text-center" >
-        <img src="img/WhatsApp Image 2022-09-24 at 7.39.50 AM.jpeg" class="d-block mx-auto mb-4" height="130"/>
+        <img src="img/Logo.jpeg" class="d-block mx-auto mb-4 rounded" height="250" />
         <h1 class="display-5 fw-bold">Bienvenid@ a Smart Team Manage Enterprises</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-6">
